// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Put whole family in bed together 1`] = `
Array [
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 1,
      "queen": 1,
      "twin": 0,
    },
    "name": "Carrie Marchese",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 2,
      "twin": 1,
    },
    "name": "Hope",
  },
  undefined,
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 1,
      "queen": 1,
      "twin": 0,
    },
    "name": "Danny Marchese",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 1,
      "queen": 1,
      "twin": 0,
    },
    "name": "Noodle",
  },
]
`;

exports[`long build 1`] = `
Array [
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Jessica Taylor",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Sarah Branaghan",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Carrie Marchese",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 2,
      "twin": 1,
    },
    "name": "Hope",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Christa Brickey",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Eric Taylor",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Daniel Branaghan",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Danny Marchese",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Alec Brickey",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Andrea Davis",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Kaila",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Serena",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Sam Knight",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Sam Donermeyer",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Travis Davis",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Sicquan",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Sam DeVine",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Mackenzie",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Pearl",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Molly",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Mara",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Caroline",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Bethany",
  },
  undefined,
  undefined,
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Kwinton",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Isaac",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Hanaan",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Deon",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Larry",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Noodle",
  },
]
`;

exports[`put married couple in same bed 1`] = `
Array [
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 1,
      "queen": 1,
      "twin": 0,
    },
    "name": "Andrea Davis",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 1,
      "queen": 1,
      "twin": 0,
    },
    "name": "Travis Davis",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 1,
      "queen": 1,
      "twin": 0,
    },
    "name": "Noodle",
  },
  undefined,
]
`;

exports[`short build 1`] = `
Array [
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Kaila",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Serena",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Sam Knight",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Sam Donermeyer",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Pearl",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Molly",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Mara",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Caroline",
  },
  Object {
    "gender": "female",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Bethany",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Sicquan",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Sam DeVine",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Mackenzie",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Kwinton",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Isaac",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Hanaan",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Deon",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Larry",
  },
  Object {
    "gender": "male",
    "howManyOthersCanShareBed": Object {
      "king": 2,
      "queen": 1,
      "twin": 0,
    },
    "name": "Noodle",
  },
  undefined,
  undefined,
  undefined,
  undefined,
  undefined,
  undefined,
  undefined,
  undefined,
  undefined,
  undefined,
  undefined,
  undefined,
  undefined,
]
`;
